feat: complete service marketplace flow